refactor league and match services; streamline methods for retrieving leagues and matches, improve error handling, and enhance code readability